[project]
name = ""
version = ""
description = ""
authors = [
    {name = "robo", email = "robobe2020@gmail.com"},
]
dependencies = [
    "mkdocs~=1.2",
]
requires-python = ">=3.8"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""

[project.optional-dependencies]
[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "mkdocs-material~=7.3",
]
